--- a/pem_web/Latihan4.html
+++ b/pem_web/Latihan4.html
@@ -7,6 +7,6 @@
         <title>Document</title>
     <head>
     <body>
-       <img src="picture" alt="ini foto"/>
+       <img src="goku.jpeg" alt="ini gambar goku" width="500" height="500" border="5"/>
     </body>
     <html>
