--- a/pem_web/Latihan5.html
+++ b/pem_web/Latihan5.html
@@ -4,11 +4,32 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>webpage</title>
+        <title>latihan5</title>
     <head>
     <body>
-        <p>
-            Lorem ipsum dolor <br> adipicising elit quasi
+        <table border="2">
+            
+            <th>NAMA</th>
+            <th>1</th>
+            <th>UMUR</th>
+            <tr>
+                <td>YOHANES</td>
+                <td>KIBIL</td>
+                <td>YU</td>
+        </table>
+            <tr>
+            </tr>
+        </table>
+        <table border="1">
+            <tr>
+                <th>No</th> <th>NAMA</th><th>UMUR</th>
+                </tr>
+                <tr>
+                    <td>1</td><td>ABIL</td><td>30</td>
+                </tr>
+                <tr>
+                    <td>2</td><td>YASMIN</td><td>26</td>
+                </tr>
         </p>
     </body>
 <html>
