--- a/pem_web/Latihan7.html
+++ b/pem_web/Latihan7.html
@@ -7,10 +7,19 @@
         <title>webpage</title>
     <head>
     <body>
+        #tanpa tingkatan (ul)
+        <ul>
+            <li>apple</li>
+            <li>infinix</li>
+            <li>nokia</li>
+            <li>exia</li>
+            <li>blackberry</li>
+        </ul>
+        #ada tingkatan (ol)
        <ol>
         <li>Apel</li>
         <li>Mangga</li>
-        <li>Grrapes<li>
+        <li>Grrapes</li>
         <li>Orange</li>
         <li>No one</li>
        </ol>
